[package]
name = "envoy"
version = "0.1.0"
authors = ["alex <bigbadmath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde = "1.0.118"
serde_derive = "1.0.118"
warp = "0.2"
anyhow = "1.0.36"
rust-bert = "0.12.0"
env_logger = "0.8.2"
log = "0.4.11"
